spacing fixes

--- a/gettagripz/css/gettaStyles.css
+++ b/gettagripz/css/gettaStyles.css
@@ -360,7 +360,7 @@ header img{
   height: auto;
   max-width: 800px;
   width: 60%;
-  margin: 20px 0px;
+  margin: 40px 0px;
 }
 
 section h2{
@@ -402,11 +402,11 @@ section h2{
   flex-wrap: nowrap;
   gap: 2rem;
   padding: 2rem 0rem;
-  height: 500px;
+  height: auto;
 }
 
 #mainDisplay {
-  max-height: 100%;
+  max-height: 500px;
   max-width: 100%;
   height: auto;
   width: auto;
@@ -415,7 +415,8 @@ section h2{
 }
 
 .displayed_image{
-  height: 500px;
+  height: auto;
+  max-height: 500px;
   width: auto;
 }
 
@@ -491,7 +492,6 @@ section h2{
   font-size: 25px;
   font-weight: bold;
 }
-
 
 
 @media screen and (max-width: 1200px) {
@@ -600,8 +600,6 @@ section h2{
     max-width: 100%;
     box-sizing: border-box;
   }
-
-  
 
   .testimonials {
     top: 300px;
